conversion into food app, added border, card(hardcoded)

--- a/index.css
+++ b/index.css
@@ -1,3 +1,49 @@
-#heading {
-  color: brown;
+.header {
+  display: flex;
+  justify-content: space-between;
+  border: 2px solid black;
+}
+
+.logo {
+  width: 200px;
+}
+
+.nav-items {
+  padding: auto;
+}
+
+.nav-items > ul {
+  font-size: 24px;
+  display: flex;
+  list-style-type: none;
+}
+
+.nav-items > ul > li {
+  padding: 10px;
+  margin: 10px;
+}
+
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.restaurant-card {
+  margin: 5px;
+  padding: 5px;
+  width: 150px;
+  height: 300px;
+}
+
+.restaurant-card:hover {
+  cursor: pointer;
+  border: 1px solid black;
+}
+
+.restaurant-image {
+  width: 100%;
+}
+
+.search {
+  padding: 10px;
 }
